2010-10-29  Konstantin Tokarev <annulen@yandex.ru>

	* scripts/CMakeLists.txt: added dependency 'openbabel' to target
	'_openbabel' (Python bindings)
	
	On non-Windows platfroms Python module is linked by custom script
	which is not aware of target dependencies. This change fixes parallel
	build

2010-10-24  Jean Brefort  <jean.brefort@normalesup.org>

	* data/space-groups.txt: fixed space group 104 (missing transfoms).

2010-10-14 Jiahao Chen <jiahao@mit.edu>

	* src/charges/qeq.cpp,src/charges/qtpie.cpp: Added documentation.
	* data/qeq.txt: Simplified parameter file format.
	
	There is an upper bound on the screening radius that is constrained by
	the atomic hardness parameter. (These parameters are not entirely
	independent.) If this constraint is violated, i.e. radius * hardness <
	sqrt(2/pi) a.u., then it is possible to get infinite charges for
	certain geometries. For now, the screening radius using the Gaussian
	orbitals (in this code) is taken to be the same as the screening radius
	for Slater orbitals in the original QEq specifications, except when the
	constraint is violated, in which case the radius is reduced to the
	largest possible radius satisfying the constraint. To do this properly,
	a reparameterization of the methods are required, but this should
	suffice for not producing ridiculous charge predictions.

2010-09-30 Chris Morley

	* src/alias.cpp: Use MCDL for expanding aliases in 2D mols, since
	builder seems now only to generate 3D coords. Add dummy connection to
	alias before generating 3D coords to improve geometry, but still not
	quite right for NO2. Fixes #3077897
	
	* src/mcdlutil.cpp: small doc change
	
	* src/config.h.cmake: MSVC build: enable warning on unreferenced
	formal parameters and disable warning on forcing int etc. value 
	to bool 'true' or 'false' (performance warning). Should reduce number
	of warnings.

2010-09-29 Noel O'Boyle

	* src/formats/smilesformat.cpp: Handle cis/trans stereo involving ring